@@ -717,4 +717,6 @@ October 23, 2007 - Add detach menu entry.. really stops processing and does an
                  - added version specific daq locations to search path for
                    spectcldaq (gui).
 
-November 6, 2007 - Convert to svn repository
+November  6, 2007 - Convert to svn repository
+November 26, 2007 - BZ 327 - Fix multicolored monster problems with changing spectra
+                    in resopnse to tree parameter range changes.
